book_store_service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstoreservice
  labels:
    app: bookstoreservice
spec:
  ports:
  - port: 80
    targetPort: 4000
  type: NodePort
  selector:
    app: bookstorepod
