bookstoreingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookstoreingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /status
        backend:
          serviceName: bookstoreservice
          servicePort: 8080
